Moved conventions to new intro chapter.

--- a/shortintro.tex
+++ b/shortintro.tex
@@ -1,10 +1,10 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % shortintro.tex - Ian Huston
-% $Id: shortintro.tex,v 1.1 2009/10/15 17:23:17 ith Exp $
+% $Id: shortintro.tex,v 1.2 2009/10/15 17:34:15 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: shortintro.tex,v 1.1 2009/10/15 17:23:17 ith Exp $}
+{\version$Id: shortintro.tex,v 1.2 2009/10/15 17:34:15 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -84,5 +84,26 @@ scalar field perturbation is described purely in terms of the field itself.
 This equation is the basis of the numerical calculation in
 Chapter~\ref{ch:numericalsystem} which is tested for two standard inflationary
 potentials. 
+
+
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+\subsection*{Conventions}
+\label{sec:conventions}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+Throughout this work units are chosen such that $\Mpl \equiv (8\pi G )^{-1/2}=
+2.4 \times 10^{18}\, {\rm GeV}$ defines the reduced Planck mass and $c=\hbar =1$. 
+
+An overdot ($\dot{~}$) is used for differentiation with respect to proper
+time $t$ and a prime ($'$) for differentiation with respect to conformal time
+$\eta$. The dagger symbol ($^\dagger$) denotes differentiation with respect to the
+number of e-foldings $\N$.
+% 
+A subscripted comma denotes partial differentiation by the symbol it
+precedes, \eg $f_{,\varphi} = \dfrac{\partial f}{\partial \varphi}$.
 
 
