Changed to using Gauss not gauss.

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % abstract.tex - Ian Huston
-% $Id: abstract.tex,v 1.11 2009/08/21 10:44:51 ith Exp $
+% $Id: abstract.tex,v 1.12 2009/10/15 17:35:05 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.11 2009/08/21 10:44:51 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.12 2009/10/15 17:35:05 ith Exp $}
 % 
 % 
 \chapter*{Abstract}
@@ -16,12 +16,12 @@ Many different models of inflation have been constructed which fit current obser
 In this work theoretical and numerical methods for constraining the parameter space of a wide class
 of such models are described.
 
-First, string-theoretic models with large non-gaussian signatures are investigated.
+First, string-theoretic models with large non-Gaussian signatures are investigated.
 % First paper
 An upper bound is placed on the amplitude of primordial gravitational waves produced by ultra-violet
 Dirac-Born-Infeld inflation. In all but the most finely tuned cases this bound is incompatible with
 a lower bound derived for inflationary models which exhibit a red spectrum and detectable
-non-gaussianity. 
+non-Gaussianity. 
 
 % The bound is insensitive
 % to the form of the inflaton potential and the warp factor of the compactified
@@ -33,13 +33,13 @@ non-gaussianity.
 % 10^{-7}$. 
 % This is incompatible with a corresponding lower limit of $r > 0.1
 % (1-n_s)$, which applies to any model that generates a red spectral index $n_s
-% <1$ and a potentially detectable non-gaussianity.
+% <1$ and a potentially detectable non-Gaussianity.
 % % Possible ways of evading these bounds in more general DBI-type scenarios are
 % % discussed and a multiple-brane model is investigated as a specific example. 
 % 
 % % Second Paper
 % Extending this analysis, a class of non-canonical inflationary models is
-% identified where the leading-order contribution to the non-gaussianity is
+% identified where the leading-order contribution to the non-Gaussianity is
 % determined by the sound speed of the fluctuations in
 % the inflaton field. 
 % This class of models includes the effective action for
@@ -49,7 +49,7 @@ non-gaussianity.
 % % fundamental representation of SU(2). 
 % The upper bounds on $r$ in the single-brane
 % DBI scenario can be relaxed in multi-brane configurations if a large and
-% detectable non-gaussianity is generated. 
+% detectable non-Gaussianity is generated. 
 % % Moreover models with a small number of
 % % coincident branes could generate a gravitational wave background that will be
 % % observable to future experiments. 
@@ -67,7 +67,8 @@ of scalar field variations only, is numerically solved.
 The slow-roll version of the second order source term is used and the method is
 shown to be extendable to the full equation.
 This procedure allows the evolution of second order
-perturbations in general and the calculation of the non-gaussianity parameter in cases
+perturbations in general and the calculation of the non-Gaussianity parameter in
+cases
 where there is no analytical solution available.  
 
 
