Removed name of supervisors.

--- a/title.tex
+++ b/title.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % 
 % title.tex - Ian Huston
-% $Id: title.tex,v 1.5 2009/08/17 13:57:30 ith Exp $
+% $Id: title.tex,v 1.6 2009/10/15 18:05:07 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: title.tex,v 1.5 2009/08/17 13:57:30 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: title.tex,v 1.6 2009/10/15 18:05:07 ith Exp $}
 % 
 \college{Queen Mary}
 % 
@@ -11,7 +11,7 @@
 \department{Mathematical Sciences}
 % 
 % 
-\supervisor{J.E. Lidsey and Reza Tavakol}
+% \supervisor{J.E. Lidsey and Reza Tavakol}
 % 
 % 
 % 
