Added more intro.

--- a/shortintro.tex
+++ b/shortintro.tex
@@ -1,10 +1,10 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % shortintro.tex - Ian Huston
-% $Id: shortintro.tex,v 1.2 2009/10/15 17:34:15 ith Exp $
+% $Id: shortintro.tex,v 1.3 2009/10/16 14:27:17 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: shortintro.tex,v 1.2 2009/10/15 17:34:15 ith Exp $}
+{\version$Id: shortintro.tex,v 1.3 2009/10/16 14:27:17 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -64,15 +64,64 @@ a numerical calculation which will allow the investigation of higher order
 perturbations. Both these methods have the potential to seriously limit the
 models investigated and possibly rule these scenarios out.
 
+
+In Chapter~\ref{ch:introduction} the foundations are laid for these investigations.
+The geometry and physics of the Friedmann-Robertson-Walker universe are presented and
+inflationary cosmology is introduced to alleviate problems with the standard Big
+Bang scenario. Slow roll conditions are then defined to ensure an adequate duration
+of inflation occurs. Despite its elegance, this homogeneous universe is, however,
+exceedingly dull. To understand the inhomogeneities present in reality, first order
+cosmological perturbation theory is employed. Models with non-canonical
+actions can also be considered. The relationships between observable quantities and
+the model parameters are altered in this case meaning these models could be
+distinguished from those with canonical actions. The departure of primordial
+perturbations from a Gaussian random distribution could also reveal significant
+information about the underlying physics at work.
+
+
 In Part~\ref{part:dbi} of this work theoretical bounds are placed on a class of
 non-canonical inflationary models. These models illustrate the dynamics of
 extended objects called branes in superstring theory and are considered some of
 the most promising candidates for achieving inflation using string theory.
+
 Chapter~\ref{ch:dbi-intro} outlines the Dirac-Born-Infeld (DBI) scenario in
 terms of the string theoretic background and how it applies in four-dimensions
-as a realisation of inflation. In Chapter~\ref{ch:dbi} two bounds are derived
-for the standard DBI model which are incompatible for most of the known
-parameter space. A class of models which evade this bound are found in
+as a realisation of inflation. The six extra dimensions required by string theory
+play an integral role in this scenario. These are compactified into a complex
+manifold whose geometry allows extended regions called throats to exist. DBI
+inflation consists of a brane moving in one of the throats. The inflaton field is
+the radial distance of the brane from the tip of the throat. Translating the
+higher-dimensional motion into four dimensions introduces a square-root into the
+effective action. The real nature of the action then enforces an upper bound on the
+kinetic energy of the inflaton allowing a sufficiently long period of inflation. The
+inflaton field variation during its movement in the throat is directly linked to the
+amplitude of tensor modes which can be produced by a result due to Lyth
+\cite{lyth}.
+
+
+In Chapter~\ref{ch:dbi} the repercussions of this relationship between the change in
+the field and the tensor mode amplitude is explored further. In the DBI scenario,
+Baumann \& McAllister \cite{bmpaper} used the Lyth bound to place a conservative
+upper bound on the total production of tensor modes during inflation by assuming the
+brane does not move further than the length of the throat. By considering only the
+period of observable inflation, which takes place over a much smaller region of the
+throat, this bound is considerably strengthened. In the generic case the ratio
+of amplitudes of tensor and scalar perturbations must be less than $10^{-7}$. This
+is below the sensitivity of even the most optimistic forecasts for future
+observational experiments. 
+
+If attention is limited to brane motion down the throat, another complementary bound
+on the tensor modes can be derived which is based on the non-Gaussianity produced
+by the model. The DBI scenario is inherently non-Gaussian in nature but even assuming
+the largest levels allowed by observations the tensor modes are bounded to being
+above $0.005$. These two theoretical bounds are clearly incompatible in the generic
+case and only a very fine-tuned selection of model parameters allows the standard
+DBI scenario to survive. By taking a more phenomenological approach, keeping
+the square-root in the action while allowing the other parameters to vary,
+conditions under which the bounds can be relaxed are found.
+
+
+A class of models which evade this bound are found in
 Chapter~\ref{ch:multibrane}. One particular model in this class is a
 multi-coincident brane scenario with a small finite number of branes.
 
