Added multibrane section.

--- a/shortintro.tex
+++ b/shortintro.tex
@@ -1,10 +1,10 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % shortintro.tex - Ian Huston
-% $Id: shortintro.tex,v 1.3 2009/10/16 14:27:17 ith Exp $
+% $Id: shortintro.tex,v 1.4 2009/10/16 14:58:14 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: shortintro.tex,v 1.3 2009/10/16 14:27:17 ith Exp $}
+{\version$Id: shortintro.tex,v 1.4 2009/10/16 14:58:14 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -94,36 +94,53 @@ the radial distance of the brane from the tip of the throat. Translating the
 higher-dimensional motion into four dimensions introduces a square-root into the
 effective action. The real nature of the action then enforces an upper bound on the
 kinetic energy of the inflaton allowing a sufficiently long period of inflation. The
-inflaton field variation during its movement in the throat is directly linked to the
-amplitude of tensor modes which can be produced by a result due to Lyth
+total inflaton field variation is directly linked to the
+amplitude of tensor modes which can be produced, by a result due to Lyth
 \cite{lyth}.
 
 
 In Chapter~\ref{ch:dbi} the repercussions of this relationship between the change in
-the field and the tensor mode amplitude is explored further. In the DBI scenario,
-Baumann \& McAllister \cite{bmpaper} used the Lyth bound to place a conservative
-upper bound on the total production of tensor modes during inflation by assuming the
+the field and the tensor mode amplitude are explored further. In the DBI scenario,
+Baumann \& McAllister \cite{bmpaper} used the Lyth result to place a conservative
+upper bound on the total production of tensor modes during inflation, by assuming the
 brane does not move further than the length of the throat. By considering only the
 period of observable inflation, which takes place over a much smaller region of the
-throat, this bound is considerably strengthened. In the generic case the ratio
-of amplitudes of tensor and scalar perturbations must be less than $10^{-7}$. This
-is below the sensitivity of even the most optimistic forecasts for future
-observational experiments. 
+throat, a new bound is derived which is considerably stronger. In the generic
+case the ratio of amplitudes of tensor and scalar perturbations must be less than
+$10^{-7}$. This is below  even the most optimistic forecasts for
+the sensitivity of future observational experiments. 
 
 If attention is limited to brane motion down the throat, another complementary bound
-on the tensor modes can be derived which is based on the non-Gaussianity produced
-by the model. The DBI scenario is inherently non-Gaussian in nature but even assuming
-the largest levels allowed by observations the tensor modes are bounded to being
+on the tensor modes can be derived which depends on the non-Gaussianity produced
+during inflation. The DBI scenario is inherently non-Gaussian in nature but, even
+assuming the largest levels allowed by observations, the tensor-scalar ratio must be
 above $0.005$. These two theoretical bounds are clearly incompatible in the generic
-case and only a very fine-tuned selection of model parameters allows the standard
-DBI scenario to survive. By taking a more phenomenological approach, keeping
+case and only a very fine-tuned selection of model parameters allows the standard DBI
+scenario to survive. By taking a more phenomenological approach, keeping
 the square-root in the action while allowing the other parameters to vary,
 conditions under which the bounds can be relaxed are found.
 
 
-A class of models which evade this bound are found in
-Chapter~\ref{ch:multibrane}. One particular model in this class is a
-multi-coincident brane scenario with a small finite number of branes.
+A more general class of models which evade the upper bound are found in
+Chapter~\ref{ch:multibrane}. The DBI scenario is characterised by a simple
+algebraic relation in which the sound speed of fluctuations is inversely
+propotional to a contribution to the non-gaussianity. By allowing the
+proportionality constant to vary a new family of actions is described for which the
+bound on the tensor-scalar ratio can be relaxed. 
+
+Instead of considering a single brane moving in the throat, a more natural scenario
+might involve multiple branes. These could be created from the energy released by a
+brane/anti-brane annihilation and could move up the throat away from the tip.
+In \Rref{thomasward} Thomas \& Ward described the case when these branes are
+coincident. When a large number of branes coincide the resultant action is similar
+to the single brane action and is restricted by the bounds on the tensor-scalar
+ratio. For a small finite number of branes, however, the action is non-Abelian in
+nature and is one of the family of bound-relaxing actions described above.
+Nevertheless this model is still constrained by observations and if a detectable
+tensor signal is required only two or three coincident branes
+are allowed. This limit on the number of branes is strongly dependent on the
+non-Gaussianity and a tightening of the observational bounds could rule out the
+possibility of an obervable tensor signal from the model altogether.
 
 
 Part~\ref{part:numerical} applies numerical techniques to investigate the
