--- a/shortintro.tex
+++ b/shortintro.tex
@@ -1,10 +1,10 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % shortintro.tex - Ian Huston
-% $Id: shortintro.tex,v 1.5 2009/10/16 17:18:31 ith Exp $
+% $Id: shortintro.tex,v 1.6 2009/10/19 09:28:32 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: shortintro.tex,v 1.5 2009/10/16 17:18:31 ith Exp $}
+{\version$Id: shortintro.tex,v 1.6 2009/10/19 09:28:32 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -38,7 +38,7 @@ many possible realisations of inflation and there has been an explosion in the
 number of theoretical models which agree with current observational limits
 (for reviews see for example \cite{book:liddle, Alabidi:2008ej, Baumann2009}).
 
-Ground and spaced based observations have significantly challenged theoretical
+Ground and space-based observations have significantly challenged theoretical
 cosmological models with a wealth of new data. The Wilkinson Microwave
 Anisotropy Probe mission (WMAP) \cite{Komatsu:2008hk} in conjunction with supernova
 surveys and other evidence have shown that the fluctuations in
