Added wording about Minkowski.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.52 2009/10/15 17:34:15 ith Exp $
+% $Id: mainintro.tex,v 1.53 2009/10/19 10:56:44 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.52 2009/10/15 17:34:15 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.53 2009/10/19 10:56:44 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -808,13 +808,11 @@ Suppose one observer selects a zero particle state as the vacuum. Another
 observer accelerating with respect to the first will see particles being
 created in this ``vacuum'' state due to the Unruh effect
 \cite{Kinney2009, Unruh1976a}. In selecting the vacuum we must choose one of the
-many
-equivalent options.
-To do this we consider the far past where $\eta\rightarrow -\infty$ and all
-modes
-are inside the horizon, $k\gg aH$. In this limit the FRW background spacetime
-asymptotes to Minkowski space. This suggests the Minkowski vacuum as the
-most natural vacuum state to select. This choice of the Minkowski vacuum at
+many equivalent options.
+To do this we consider the far past where $\eta\rightarrow -\infty$. The wavelengths of all the
+modes are then much smaller than the Hubble radius and curvature scale. The modes are
+therefore assumed to evolve in flat space. This suggests the Minkowski vacuum as the
+most natural vacuum state to select and this choice of vacuum at
 early times is known as the Bunch-Davies vacuum.
 % 
 In the limit $\eta\rightarrow -\infty, k/aH\rightarrow \infty$ the mode equation
