Added some corrections.

--- a/shortintro.tex
+++ b/shortintro.tex
@@ -1,10 +1,10 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % shortintro.tex - Ian Huston
-% $Id: shortintro.tex,v 1.6 2009/10/19 09:28:32 ith Exp $
+% $Id: shortintro.tex,v 1.7 2009/10/19 11:33:25 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: shortintro.tex,v 1.6 2009/10/19 09:28:32 ith Exp $}
+{\version$Id: shortintro.tex,v 1.7 2009/10/19 11:33:25 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -16,9 +16,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 In the past cosmology was a speculative science. The scarcity of observational
 data meant that many conflicting theories of the evolution of the universe were
-entertained with nothing but personal opinion to differentiate between them.
+entertained, with nothing but personal opinion to differentiate between them.
 The explosion in the quantity and quality of observational data in recent years
-has led to a much more competitive market place for ideas about the physical
+has led to a much more competitive market-place for ideas about the physical
 beginning of everything.
 
 The Big Bang scenario has emerged as a cohesive framework for the evolution of
@@ -59,10 +59,10 @@ universe.
 % particular classes of inflationary models.
 
 The goal of this work is to constrain inflationary models in two very different
-ways: by deriving theoretical limits on their parameter space and demonstrating
+ways: by deriving theoretical limits on their parameter space, and demonstrating
 a numerical calculation which will allow the investigation of higher order
-perturbations. Both these methods have the potential to seriously limit the
-models investigated and possibly rule these scenarios out.
+perturbations. Both these methods have the potential to limit the
+parameter space of the models investigated and possibly rule them out.
 
 
 In Chapter~\ref{ch:introduction} the foundations are laid for these investigations.
@@ -118,14 +118,14 @@ above $0.005$. These two theoretical bounds are clearly incompatible in the gene
 case and only a very fine-tuned selection of model parameters allows the standard DBI
 scenario to survive. By taking a more phenomenological approach, keeping
 the square-root in the action while allowing the other parameters to vary,
-conditions under which the bounds can be relaxed are found.
+conditions are found under which the bounds can be relaxed.
 
 
 A more general class of models which evade the upper bound are found in
 Chapter~\ref{ch:multibrane}. The DBI scenario is characterised by a simple
 algebraic relation in which the sound speed of fluctuations is inversely
 propotional to a contribution to the non-gaussianity. By allowing the
-proportionality constant to vary a new family of actions is described for which the
+proportionality constant to vary, a new family of actions is described for which the
 bound on the tensor-scalar ratio can be relaxed. 
 
 Instead of considering a single brane moving in the throat, a more natural scenario
@@ -185,7 +185,7 @@ Three different ranges of the discretised momentum are considered and general
 results presented for the $\msqphisq$ potential. 
 % Comment out results?
 As expected for a single field slow
-roll model the second order perturbations are highly suppressed compared to the
+roll model, the second order perturbations are highly suppressed compared to the
 first order. 
 The source term of the second order perturbation equation is similar in form to the
 power spectrum of first order perturbations, decreasing rapidly until horizon
