Removed italics around ie and eg.

--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.22 2009/10/14 18:37:10 ith Exp $
+% $Id: ihmacros.sty,v 1.23 2009/10/21 11:50:42 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -10,8 +10,8 @@
 % % % % % % % % % % % % % % % % % % % % % % % 
 % Typographical
 \newcommand{\etal}{\emph{et al.\ }}
-\newcommand{\eg}{\emph{e.g.\ }}
-\newcommand{\ie}{\emph{i.e.\ }}
+\newcommand{\eg}{e.g.\ }
+\newcommand{\ie}{i.e.\ }
 
 % Maths letters
 \renewcommand{\H}{\ensuremath{\mathcal{H}}}
