Changed eq to use align.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.55 2009/10/19 13:09:48 ith Exp $
+% $Id: mainintro.tex,v 1.56 2009/10/21 11:50:49 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.55 2009/10/19 13:09:48 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.56 2009/10/21 11:50:49 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1125,15 +1125,15 @@ isotropic pressure.
 It proves convenient to define two parameters in terms of the 
 kinetic function $P$ and its derivatives \cite{lidser1,lidser3}: 
 % 
-\begin{eqnarray}
+\begin{align}
 \label{eq:defcs-dbiintro}
- c_s^2 \equiv \frac{\PX}{E_{,X}} =  \frac{\PX}{\PX + 2X P_{,XX}} \,,
+ c_s^2 &\equiv \frac{\PX}{E_{,X}} =  \frac{\PX}{\PX + 2X P_{,XX}} \,,
 \\
 \label{eq:deflambda-dbiintro}
-\Lambda \equiv  \frac{X^2 P_{,XX} +
+\Lambda &\equiv  \frac{X^2 P_{,XX} +
 \frac{2}{3}X^3 P_{,XXX}}{X P_{,X} +
 2X^2 P_{,XX}}\,.
-\end{eqnarray}
+\end{align}
 % 
 The first parameter, $c_s$, is called the sound speed of the fluctuations
 in the inflaton field. This can be significantly less than unity, 
